--- a/Task2.Comparers/Task2.Comparers.csproj
+++ b/Task2.Comparers/Task2.Comparers.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6CDAAE36-0F13-4C9B-ADFB-DFE975355C09}</ProjectGuid>
+    <ProjectGuid>{159D5610-D890-44A5-B6B2-FD2BF97CD007}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Task2.Logic.Tests</RootNamespace>
-    <AssemblyName>Task2.Logic.Tests</AssemblyName>
+    <RootNamespace>Task2.Comparers</RootNamespace>
+    <AssemblyName>Task2.Comparers</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,10 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework, Version=3.5.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
-      <HintPath>..\packages\NUnit.3.5.0\lib\net45\nunit.framework.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -43,24 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Comparers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SortTests.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Task2.Comparers\Task2.Comparers.csproj">
-      <Project>{159d5610-d890-44a5-b6b2-fd2bf97cd007}</Project>
-      <Name>Task2.Comparers</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Task2.Logic\Task2.Logic.csproj">
-      <Project>{7e7423c3-b580-4604-91e9-2535da5148c5}</Project>
-      <Name>Task2.Logic</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
